<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/pg_fundo">

    <LinearLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="10dp"
        tools:context=".MainActivity">


        <ImageView
            android:id="@+id/imageView"
            android:layout_width="50dp"
            android:layout_height="36dp"
            android:layout_marginLeft="10dp"
            app:srcCompat="@android:drawable/stat_notify_sdcard_prepare" />

        <TextView
            android:id="@+id/textViewUilabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="60dp"
            android:layout_marginTop="-35dp"
            android:text="@string/uilabs"
            android:textColor="#EEE"
            android:textSize="24sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginTop="25dp"
            android:layout_gravity="center_horizontal"
            tools:context="br.com.fake.steam.MainActivity">

            <TextView
                android:id="@+id/textViewTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Title"
                android:textColor="#EEE"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/pg_edittext"
                android:ems="10"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:textColor="#EEE"
                android:hint="@string/title"
                android:textColorHint="#605B5B"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#EEE"
                android:layout_marginTop="15dp"
                android:text="@string/status"
                android:textSize="24sp" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radioButton3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:buttonTint="#575454"
                    android:checked="false"
                    android:text="@string/done"
                    android:textColor="#EEE"
                />

                <RadioButton
                    android:id="@+id/radioButton2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="50"
                    android:backgroundTint="#2194EF"
                    android:buttonTint="#2196F3"
                    android:checked="true"
                    android:text="@string/not_done"
                    android:textColor="#EEE" />

            </RadioGroup>

            <TextView
                android:id="@+id/textView3"
                android:textColor="#EEE"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/priorit"
                android:textSize="24sp" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radioButton4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:textColor="#EEE"
                    android:buttonTint="#575454"
                    android:text="@string/low" />

                <RadioButton
                    android:id="@+id/radioButton7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:buttonTint="#57B2FA"
                    android:checked="true"
                    android:text="Medium"
                    android:textColor="#EEE" />

                <RadioButton
                    android:id="@+id/radioButton8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="7"
                    android:textColor="#EEE"
                    android:buttonTint="#575454"
                    android:text="High" />

            </RadioGroup>

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textColor="#EEE"
                android:text="Time and Date"
                android:textSize="24sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView7"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textColor="#575454"
                        android:text="2014-02-13" />

                    <TextView
                        android:id="@+id/textView8"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textColor="#575454"
                        android:gravity="right"
                        android:text="17:52:00" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/button"
                        android:layout_width="62dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_weight="5"
                        android:background="@drawable/pg_button"
                        android:text="Choose Date"
                        android:textColor="@color/colorAccent"
                    />

                    <Button
                        android:id="@+id/button3"
                        android:layout_width="61dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="5"
                        android:background="@drawable/pg_button_flutuante"
                        android:text="Button"
                        android:textColor="#000000" />

                    <Button
                        android:id="@+id/button2"
                        android:layout_width="62dp"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="5dp"
                        android:layout_weight="5"
                        android:background="@drawable/pg_button"
                        android:text="Choose Time"
                        android:textColor="@color/colorAccent" />
                </LinearLayout>
            </LinearLayout>
    </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="90dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:layout_marginLeft="4dp"
                android:text="Cancel"
                android:background="@drawable/pg_button"
                android:textColor="@color/colorAccent"/>

            <Button
                android:id="@+id/button5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="0"
                android:background="@drawable/pg_button_flutuante"
                android:textColor="#000000" />

            <Button
                android:id="@+id/button6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:background="@drawable/pg_button"
                android:textColor="@color/colorAccent"
                android:text="Reset" />

            <Button
                android:id="@+id/button7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="0"
                android:background="@drawable/pg_button_flutuante"
                android:textColor="#000000"/>

            <Button
                android:id="@+id/button8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="4dp"
                android:layout_weight="0"
                android:text="Submit"
                android:background="@drawable/pg_button"
                android:textColor="@color/colorAccent"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>